--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,10 @@
 </head>
 
 <body>
-  <button id="changeColor"></button>
+  <ul>
+    <li></li>
+  </ul>
+  <!-- <button id="changeColor"></button> -->
   <script src="popup.js"></script>
 </body>
 
