--- a/popup.html
+++ b/popup.html
@@ -3,19 +3,16 @@
 
 <head>
   <style>
-    button {
-      height: 30px;
-      width: 30px;
-      outline: none;
-    }
   </style>
 </head>
 
 <body>
   <ul>
   </ul>
-  <!-- <button id="changeColor"></button> -->
+  <input type="text" id="input">
+  <button id="button"> submit </button>
   <script src="popup.js"></script>
+
 </body>
 
 </html>
