I cant believe this is working

--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,9 @@
 
 <head>
   <style>
+    ul {
+      width: 300px;
+    }
   </style>
 </head>
 
@@ -10,7 +13,7 @@
   <ul>
   </ul>
   <input type="text" id="input">
-  <button id="button"> submit </button>
+  <button id="swoop"> submit </button>
   <script src="popup.js"></script>
 
 </body>
