--- a/popup.html
+++ b/popup.html
@@ -2,19 +2,20 @@
 <html>
 
 <head>
-  <style>
-    ul {
-      width: 300px;
-    }
-  </style>
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Expanded&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <ul>
+    <input type="text" id="input" placeholder="Add New Workspace">
+    <button id="swoop"> submit </button>
+    <script src="popup.js"></script>
   </ul>
-  <input type="text" id="input">
-  <button id="swoop"> submit </button>
-  <script src="popup.js"></script>
+  <hr>
+  <!-- <ul id = "">
+
+  </ul> -->
 
 </body>
 
