--- a/popup.html
+++ b/popup.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-  <ul>
-    <input type="text" id="input" placeholder="Add New Workspace">
-    <button id="swoop"> submit </button>
+  <ul id="saves">
+    <input type="text" id="input" placeholder="CURRENT WINDOW">
+    <button id="swoop"> Save </button>
     <script src="popup.js"></script>
   </ul>
   <hr>
-  <!-- <ul id = "">
+  <ul id="newLinks">
 
-  </ul> -->
-
+  </ul>
+  <ul>
+    <button id="clear"> Clear Cache </button>
+  </ul>
 </body>
 
 </html>
