its getting very pretty

--- a/popup.html
+++ b/popup.html
@@ -8,13 +8,13 @@
 
 <body>
   <ul id="saves">
-    <input type="text" id="input" placeholder="CURRENT WINDOW">
+    <input type="text" id="input" placeholder="Save Current Tabs">
     <button id="swoop"> Save </button>
     <script src="popup.js"></script>
   </ul>
   <hr>
   <ul id="newLinks">
-
+    <h3>Parsing Window State</h3>
   </ul>
   <ul>
     <button id="clear"> Clear Cache </button>
